force-app/main/default/objects/Support_Service__c/Support_Service__c.object-meta.xml
<CustomObject>
    <label>Support Service</label>
    <nameField>
        <displayFormat>SID-{00000}</displayFormat>
        <label>Service ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>