force-app/main/default/objects/Support_Service__c/fields/Amount_Covered__c.field-meta.xml
<CustomField>
    <fullName>Amount_Covered__c</fullName>
    <label>Amount Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>