force-app/main/default/objects/Support_Service__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Services</relationshipLabel>
    <relationshipName>Support_Services</relationshipName>
    <type>Lookup</type>
</CustomField>