force-app/main/default/objects/Support_Service__c/fields/Family_Account__c.field-meta.xml
<CustomField>
    <fullName>Family_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Account</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Support Services</relationshipLabel>
    <relationshipName>Support_Services</relationshipName>
    <type>Lookup</type>
</CustomField>