force-app/main/default/objects/Support_Service__c/fields/Financial_Assistance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assistance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if financial aid was granted</inlineHelpText>
    <label>Financial Assistance Approved</label>
    <type>Checkbox</type>
</CustomField>