force-app/main/default/objects/Support_Service__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government Grant</fullName>
            </value>
            <value>
                <fullName>Non-Profit Organization</fullName>
            </value>
            <value>
                <fullName>Private Donor</fullName>
            </value>
            <value>
                <fullName>Self-Funded</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>