force-app/main/default/objects/Support_Service__c/fields/Progress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Progress_Notes__c</fullName>
    <inlineHelpText>Notes about the child&apos;s progress during the service.</inlineHelpText>
    <label>Progress Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>