force-app/main/default/objects/Support_Service__c/fields/Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance__c</fullName>
    <formula>Total_Service_Cost__c -  Amount_Covered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>