force-app/main/default/objects/Support_Service__c/fields/Service_Duration__c.field-meta.xml
<CustomField>
    <fullName>Service_Duration__c</fullName>
    <formula>Service_End_Date__c -  Service_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>