force-app/main/default/objects/Support_Service__c/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <inlineHelpText>Date when the service concluded (if applicable).</inlineHelpText>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>