force-app/main/default/objects/Support_Service__c/fields/Service_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Service_Outcome__c</fullName>
    <label>Service Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successfully Completed</fullName>
            </value>
            <value>
                <fullName>Partially Completed</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Not Effective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>