force-app/main/default/objects/Support_Service__c/fields/Service_Provider_Contact__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Contact__c</fullName>
    <label>Service Provider Contact</label>
    <type>Phone</type>
</CustomField>