force-app/main/default/objects/Support_Service__c/fields/Service_Provider_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Email__c</fullName>
    <label>Service Provider Email</label>
    <type>Email</type>
</CustomField>