force-app/main/default/objects/Support_Service__c/fields/Service_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Date__c</fullName>
    <inlineHelpText>Date when the service request was made</inlineHelpText>
    <label>Service Request Date</label>
    <type>Date</type>
</CustomField>