force-app/main/default/objects/Support_Service__c/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <inlineHelpText>Date when the service began</inlineHelpText>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>