force-app/main/default/objects/Support_Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counselling</fullName>
            </value>
            <value>
                <fullName>Therapy</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>Special Education Support</fullName>
            </value>
            <value>
                <fullName>Health &amp; Medical Assistance</fullName>
            </value>
            <value>
                <fullName>Legal Support</fullName>
            </value>
            <value>
                <fullName>Career Training</fullName>
            </value>
            <value>
                <fullName>Mentorship Program</fullName>
            </value>
            <value>
                <fullName>Adoption Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>