force-app/main/default/objects/Support_Service__c/fields/Total_Service_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Cost__c</fullName>
    <label>Total Service Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>